--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "financme",
   "version": "0.1.0",
+  "description": "",
+  "main": "index.js",
   "private": true,
   "homepage": "https://vitboch.github.io/financme",
   "dependencies": {
@@ -20,6 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "author": "Vitaly Bochkarev",
+  "license": "ISC",
   "eslintConfig": {
     "extends": [
       "react-app",
